--- a/index.html
+++ b/index.html
@@ -23,17 +23,16 @@
 </head>
 
 <body>
-    <header>
+    <header class="shadow" id="header">
         <div class="header_left">
             <div class="header-logo">
-                <img src="./assets/img/color-default.svg" alt="">
+                <a href="index.html"><img src="./assets/img/color-default.svg" alt=""></a>
             </div>
             <div class="header-menu">
-                <a href="">Room</a>
+                <a href="index.html">Room</a>
                 <a href="">Today's Deadls</a>
             </div>
         </div>
-
     </header>
     <div class="my_container" id="container">
         <div class="slide  mb-5">
@@ -42,7 +41,7 @@
                 <div class="input_form">
                     <i class="fas fa-search icon-search"></i>
                     <input type="text" placeholder="Tìm kiếm...">
-                    <button class="btn btn-slide" onclick="getData()">Search</button>
+                    <button class="btn btn-slide" onclick="getData()" id="search">Search</button>
                 </div>
             </div>
         </div>
@@ -88,23 +87,13 @@
         </div> -->
         <div class="recent">
             <p>Hiện có <span id="numberHouse"></span> thông tin phòng trên hệ thống:</p>
-            <div style="height: 50px; font-size: 3rem; margin: 0 100px;">
-                <div id="listingTable"></div>
-                <a href="javascript:prevPage()" id="btn_prev">Prev</a>
-                <a href="javascript:nextPage()" id="btn_next">Next</a>
-                page: <span id="page"></span>
-            </div>
             <div class="recent-list" id="root">
-                <a href="javascript:prevPage()" class="recent-item shadow">
+                <a href="#" class="recent-item shadow">
                     <div class="item_info">
                         <img src="./assets/img/qij6cdhlwescboqpkhaz.webp" alt="">
                         <div class="info">
                             <p class="name_hotel">Chung cư studio 30 m² </p>
-                            <p class="description">địa chỉ quận 1 tp,hcm địa chỉ quận 1 tp,hcm địa chỉ quận 1 tp,hcm
-                                địa chỉ quận 1 tp,hcm địa chỉ quận 1 tp,hcm địa chỉ quận 1 tp,hcm địa chỉ quận 1 tp,hcm
-                                địa chỉ quận 1 tp,hcm địa chỉ quận 1 tp,hcm địa chỉ quận 1 tp,hcm
-                                địa chỉ quận 1 tp,hcm địa chỉ quận 1 tp,hcm địa chỉ quận 1 tp,hcm địa chỉ quận 1 tp,hcm
-                            </p>
+                            <p class="description">địa chỉ quận 1 tp,hcm địa chỉ quận 1 tp,hcm</p>
                             <p class="text_small">Cách trung tâm 3km</p>
                             <p class="cost_hotel">5.000.000 vnd</p>
                         </div>
@@ -120,9 +109,12 @@
                     </div>
                 </a>
             </div>
+            <div class="paging" style="height: 50px; font-size: 3rem; margin: 0 100px;">
+                <a href="javascript:prevPage()">Prev</a>
+                <p>Page: <span id="page"></span></p>
+                <a href="javascript:nextPage()">Next</a>
+            </div>
         </div>
-
-
     </div>
     <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
@@ -130,6 +122,7 @@
         crossorigin="anonymous"></script>
     <!-- My app -->
     <script src="./assets/js/app.js"></script>
+    <script src="./assets/js/singleHotel.js"></script>
 
     <!-- Chat bot -->
     <!-- <script>!(function () {
