--- a/singlehotel.html
+++ b/singlehotel.html
@@ -80,7 +80,14 @@
                     guest house.</p>
             </div>
             <div class="block-comments">
-                <h1>Đánh giá của khách du lịch</h1>
+                <div class="title_comment">
+                    <h1>Đánh giá của khách du lịch</h1>
+                    <div class="change_page">
+                        <p>next</p>
+                        <p>prev</p>
+                    </div>
+
+                </div>
                 <div class="comment_item ">
                     <div class="info_user ">
                         <p class="name_user">Ôn Đình Khang</p>
