--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
             <img src="./assets/img/image-from-rawpixel-id-1198335-jpeg.jpg" alt="">
             <div class="slide_input">
                 <div class="input_form">
-                    <i class="fas fa-search icon-search"></i>
-                    <input type="text" placeholder="Tìm kiếm...">
-                    <button class="btn btn-slide" onclick="getData()" id="search">Search</button>
+                    <p>Hiện có <span id="numberHouse"></span> thông tin phòng trên hệ thống:</p>
+                    <input type="text" onkeyup="checkEmptyInput()" placeholder="Tìm kiếm..." id="input_search">
+                    <button class="btn btn-slide" onclick="searchHotel()" id="search">Search</button>
                 </div>
             </div>
         </div>
@@ -86,7 +86,7 @@
             </div>
         </div> -->
         <div class="recent">
-            <p>Hiện có <span id="numberHouse"></span> thông tin phòng trên hệ thống:</p>
+            <p id="result_search"></p>
             <div class="recent-list" id="root">
                 <a href="#" class="recent-item shadow">
                     <div class="item_info">
@@ -109,7 +109,7 @@
                     </div>
                 </a>
             </div>
-            <div class="paging" style="height: 50px; font-size: 3rem; margin: 0 100px;">
+            <div class="paging" style="height: 50px; font-size: 3rem; margin: 0 100px;" id="pagination">
                 <a href="javascript:prevPage()">Prev</a>
                 <p>Page: <span id="page"></span></p>
                 <a href="javascript:nextPage()">Next</a>
@@ -121,9 +121,9 @@
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
     <!-- My app -->
-    <script src="./assets/js/app.js"></script>
+    <script src="./assets/js/search.js"></script>
     <script src="./assets/js/singleHotel.js"></script>
-
+    <script src="./assets/js/app.js"></script>
     <!-- Chat bot -->
     <!-- <script>!(function () {
             let e = document.createElement("script"),
