--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hệ thống gợi ý nhà trọ</title>
+    <!-- Favicon -->
+    <link rel="icon" href="./favicon.ico" type="image/gif" sizes="16x16">
     <!-- Slide -->
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
     <script src="https://kit.fontawesome.com/53e4b4d111.js" crossorigin="anonymous"></script>
@@ -29,7 +31,6 @@
             </div>
             <div class="header-menu">
                 <a href="index.html">Room</a>
-                <a href="">Today's Deadls</a>
             </div>
         </div>
     </header>
@@ -80,6 +81,7 @@
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
     <!-- My app -->
+    <script src="./assets/js/distance.js"></script>
     <script src="./assets/js/search.js"></script>
     <script src="./assets/js/singleHotel.js"></script>
     <script src="./assets/js/app.js"></script>
@@ -108,6 +110,10 @@
                 t.insertBefore(e, t.firstChild);
         })();
     </script>
+    <!-- Google Map -->
+    <script
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB3X78Xsses2jkfIU7ayGj97lxB-cZ8IVQ&callback=initMap&v=weekly"
+        async></script>
 </body>
 
 </html>
