--- a/most.html
+++ b/most.html
@@ -31,30 +31,63 @@
     </style>
 </head>
 
-<body>
+<body style="background-color: #f4fcd92d;">
     <header class="shadow" id="header">
         <div class="header_left">
             <div class="header-logo">
                 <a href="index.html"><img src="./assets/img/color-default.svg" alt=""></a>
             </div>
             <div class="header-menu">
-                <a href="index.html">Trang chủ</a>
-                <a href="most.html">Tìm phòng quanh khu vực</a>
+                <a href="index.html">Room</a>
             </div>
         </div>
     </header>
-    <div class="my_container" id="container">
-        <div class="slide  mb-5">
-            <img src="./assets/img/image-from-rawpixel-id-1198335-jpeg.jpg" alt="">
-            <div class="slide_input">
-                <div class="input_form">
-                    <p>Hiện có <span id="numberHouse"></span> thông tin phòng trên hệ thống:</p>
-                    <input type="text" onkeyup="checkEmptyInput()" placeholder="Tìm kiếm..." id="input_search">
-                    <button class="btn btn-slide" onclick="searchHotel()" id="search">Search</button>
+    <div class="container_map">
+        <div id="map"></div>
+        <div class="result">
+            <div class="form">
+                <input type="text" name="" id="destination">
+                <button class="btn btn-success" id="search">Search</button>
+            </div>
+            <div class="result_info">
+                <div class="recent-list" id="root">
+                    <a href="#" class="recent-item shadow">
+                        <div class="item_info">
+                            <img src="./assets/img/qij6cdhlwescboqpkhaz.webp" alt="">
+                            <div class="info">
+                                <p class="name_hotel">Chung cư studio 30 m² </p>
+                                <p class="description">địa chỉ quận 1 tp,hcm địa chỉ quận 1 tp,hcm</p>
+                                <p class="text_small">Cách trung tâm 3km</p>
+                                <p class="cost_hotel">5.000.000 vnd</p>
+                            </div>
+                        </div>
+                        <div class="rate">
+                            <p class="label">Very Good</p>
+                            <div class="rate_scope">
+                                <p>9.5</p>
+                            </div>
+                            <p class="text_small">192 đánh giá</p>
+
+                            <h3 class="more_info">Xem thêm</h3>
+                        </div>
+                    </a>
                 </div>
             </div>
         </div>
-        <div class="recent">
+    </div>
+    <div class="my_container" id="container">
+        <!-- <div class="slide  mb-5">
+            <img src="./assets/img/image-from-rawpixel-id-1198335-jpeg.jpg" alt="">
+            <div class="slide_input">
+                <div class="input_form">
+                    <p>Nhập địa điểm bạn cần tìm:</p>
+                    <input type="text" onkeyup="checkEmptyInput()" placeholder="Tìm kiếm..." id="input_search">
+                    <button class="btn btn-slide" id="search">Search</button>
+                </div>
+            </div>
+        </div> -->
+
+        <!-- <div class="recent">
             <p id="result_search"></p>
             <div class="recent-list" id="root">
                 <a href="#" class="recent-item shadow">
@@ -83,46 +116,19 @@
                 <p>Page: <span id="page"></span></p>
                 <a href="javascript:nextPage()">Next</a>
             </div>
-        </div>
+        </div> -->
     </div>
+
     <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
-    <!-- My app -->
-    <script async
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD7CD0qU2cXmYoMy0AxEIp4jjBqzXIx80E&callback=initMap">
-        </script>
-    <script src="./assets/js/search.js"></script>
-    <script src="./assets/js/singleHotel.js"></script>
-    <script src="./assets/js/app.js"></script>
-    <!-- Chat bot -->
-    <!-- <script>!(function () {
-            let e = document.createElement("script"),
-                t = document.head || document.getElementsByTagName("head")[0];
-            (e.src =
-                "https://cdn.jsdelivr.net/npm/rasa-webchat@1.0.1/lib/index.js"),
-                (e.async = !0),
-                (e.onload = () => {
-                    window.WebChat.default(
-                        {
-                            initPayload: '/hello path 1',
-                            customData: { language: "en" },
-                            socketUrl: "http://localhost:5005/",
-                            // add other props here
-                            title: "Chatbot",
-                            params: {
-                                storage: "session"
-                            }
-                        },
-                        null
-                    );
-                }),
-                t.insertBefore(e, t.firstChild);
-        })();
-    </script> -->
     <!-- Google Map -->
-
+    <script async
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCyUycwAtW-AZABnvrhJgvTjE4pMBvT3OQ&callback=initMap">
+        </script>
+    <!-- Js distance map -->
+    <script src="./assets/js/distance.js"></script>
 </body>
 
 </html>
