--- a/most.html
+++ b/most.html
@@ -66,7 +66,7 @@
                                 <p class="text_small">Cách trung tâm 3km</p>
                                 <div class="more">
                                     <p class="cost_hotel">5.000.000 vnd</p>
-                                    <a href="#" class="more_info">Chi tiết</a>
+                                    <a href="#" class="more_info">Chi tiết0000</a>
                                 </div>
                             </div>
                         </div>
