Complete search by location

--- a/googleMap.html
+++ b/googleMap.html
@@ -28,6 +28,10 @@
             width: 1500px;
             height: 900px;
         }
+
+        .item_info:hover {
+            cursor: pointer;
+        }
     </style>
 </head>
 
@@ -39,7 +43,8 @@
             </div>
             <div class="header-menu">
                 <a href="index.html">Trang chủ</a>
-                <a href="most.html">Tìm phòng quanh khu vực</a>
+                <a href="search_content.html">Tìm kiếm theo nội dung</a>
+                <a href="googleMap.html">Tìm phòng quanh khu vực</a>
             </div>
         </div>
     </header>
@@ -82,7 +87,7 @@
         crossorigin="anonymous"></script>
     <!-- Google Map -->
     <script async
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCyUycwAtW-AZABnvrhJgvTjE4pMBvT3OQ&callback=initMap">
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBJfEsqSNbL0DDZHMm82RtaQwL1OERFfJo&callback=initMap">
         </script>
     <!-- Js distance map -->
     <script src="./assets/js/distance.js"></script>
